# rgbinsights

./: .gitignore  Makefile  README.md  install.ps1  install.sh  prompt-maestro-semaforo-instagram.md  start.ps1  start.sh
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: login.py  login_browser.py  main.py  web_check.py  web_probe.py
backend/app/api/: deps.py  schemas.py
backend/app/api/routers/: admin.py  avatars.py  campaigns.py  events.py  health.py  ig.py  posts.py  scan.py  sync.py  tasks.py  users.py
backend/app/application/: campaign.py  campaign_sender.py  dto.py  tasks.py  use_cases.py
backend/app/application/use_cases/: __init__.py  _shared.py  enrich.py  list_users.py  scan.py  sync.py
backend/app/domain/: entities.py  result.py  traffic_light.py
backend/app/infrastructure/config/: settings.py
backend/app/infrastructure/instagram/: base.py  chrome_cdp.py  errors.py  factory.py  fake_source.py  ig_login.py  instagrapi_source.py  playwright_source.py  session.py  shared.py  throttle.py  web_source.py
backend/app/infrastructure/persistence/: db.py  models.py  repositories.py
backend/tests/: conftest.py  test_admin.py  test_campaign.py  test_classify.py  test_ig.py  test_use_cases.py  test_web_source.py
docs/superpowers/specs/: 2026-07-03-fiestas-outreach-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  hooks.ts
(+43 files in other folders)
