[project]
name = "rgb-semaforo-backend"
version = "0.1.0"
description = "RGB Collective — Instagram semáforo (local internal tool)"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: FastAPI's Depends()/Query() in defaults is the intended idiom.
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
mypy_path = "."
files = ["app", "tests"]

# instagrapi ships no type stubs; ignore only that boundary.
[[tool.mypy.overrides]]
module = ["instagrapi.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
